--- a/microcloud-config-eureka-client.yml
+++ b/microcloud-config-eureka-client.yml
@@ -1,4 +1,4 @@
-spring:
+spring: # 这其实就是两个 Eureka 的外部化配置
   profiles:
     active:
       - dev
@@ -13,7 +13,7 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
     service-url:
-        defaultZone: http://admin:enjoy@localhost:7001/eureka
+        defaultZone: http://admin:admin@localhost:7001/eureka
   instance: # eureak实例定义
     hostname: localhost # 定义 Eureka 实例所在的主机名称
 spring:
@@ -21,9 +21,9 @@ spring:
   security:
     user:
       name: admin
-      password: enjoy
+      password: admin
   application:
-    name: microcloud-config-eureka-client
+    name: cloud-config-eureka-client
 ---
 server:
  port: 7002
@@ -35,7 +35,7 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
     service-url:
-        defaultZone: http://admin:enjoy@localhost:7002/eureka
+        defaultZone: http://admin:admin@localhost:7002/eureka
   instance: # eureak实例定义
     hostname: localhost # 定义 Eureka 实例所在的主机名称
 spring:
@@ -43,6 +43,6 @@ spring:
   security:
     user:
       name: admin
-      password: enjoy
+      password: admin
   application:
-    name: microcloud-config-eureka-client
+    name: cloud-config-eureka-client
