--- a/microcloud-config-product-client.yml
+++ b/microcloud-config-product-client.yml
@@ -11,7 +11,7 @@ mybatis:
 spring:
  datasource:
    type: com.alibaba.druid.pool.DruidDataSource # 配置当前要使用的数据源的操作类型
-   driver-class-name: com.mysql.jdbc.Driver # 配置MySQL的驱动程序类
+   driverClassName: com.mysql.jdbc.Driver # 配置MySQL的驱动程序类
    url: jdbc:mysql://47.104.77.246:3306/czz?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8 # 数据库连接地址
    username: root # 数据库用户名
    password: 123456 # 数据库连接密码
@@ -55,7 +55,7 @@ mybatis:
 spring:
  datasource:
    type: com.alibaba.druid.pool.DruidDataSource # 配置当前要使用的数据源的操作类型
-   driver-class-name: com.mysql.jdbc.Driver # 配置MySQL的驱动程序类
+   driverClassName: com.mysql.jdbc.Driver # 配置MySQL的驱动程序类
    url: jdbc:mysql://47.104.77.246:3306/czz?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8 # 数据库连接地址
    username: root # 数据库用户名
    password: 123456 # 数据库连接密码
